--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "meteo",
+  "name": "meteo-component",
   "version": "0.1.0",
   "private": true,
+  "main": "./dist/meteo.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name meteo ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
